<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/item_management">

        </item>
        <item
            android:id="@+id/nav_divisi"
            android:icon="@drawable/ic_division"
            android:title="@string/divisi" />
        <item
            android:id="@+id/nav_pegawai"
            android:icon="@drawable/ic_employee"
            android:title="Pegawai" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/bottom">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline"
            android:title="About Us" />
    </group>


</menu>
